# smg

./: CMakeLists.txt  main.cpp
doc/: doc.tex
include/: matrix.h  matrix.hpp  numeric_constants.h
